--- a/css/style.css
+++ b/css/style.css
@@ -514,9 +514,6 @@ img {
 
 }
 
-.icon-li {
-
-}
 
 .icon-li:hover {
     background-color: var(--bacraund-color-button);
@@ -613,16 +610,24 @@ img {
 .addres .addres-ul {
     margin-top: 20px;
     padding: 0;
+    
 }
 
-.addres-ul li:not(:last-child) {
-    margin-bottom: 9px;
+.addres-ul {
+    
+    
 }
 
 .addres-ul :hover {
     color: var(--bacraund-color-button);
     transition: color 250ms var(--cubic);
 }
+
+.addres-ul li:not(:last-child) {
+    margin-bottom: 9px;
+}
+
+
 
 .str {
     color: var(--hero-white);
@@ -664,6 +669,7 @@ img {
     gap: 10px;
     justify-content: center;
     margin-top: 20px;
+
 }
 
 .icon-li-f:hover .icon-soc {
@@ -673,7 +679,7 @@ img {
 .icon-li-f:hover {
     background-color: var(--bacraund-color-button);
     border-radius: 50%;
-    transition: background-color 250ms var(--cubic);
+    
 }
 
 .icon-li-f {
@@ -685,6 +691,8 @@ img {
     margin-bottom: 30px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+
+    transition: background-color 250ms var(--cubic);
 }
 
 .icon-soc-f {
