--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ img {
     height: 44px;
     border-radius: 50%;
     position: relative;
-    transition: background-color 250ms var(--cubic);
+    
 
 }
 
@@ -508,9 +508,10 @@ img {
 
 .icon-li {
 
+    border-radius: 50%;
     width: 44px;
     height: 44px;
-
+    transition: background-color 250ms var(--cubic), border 250ms var(--cubic);
 
 }
 
@@ -518,7 +519,7 @@ img {
 .icon-li:hover {
     background-color: var(--bacraund-color-button);
     border-radius: 50%;
-
+    transition: background-color 250ms var(--cubic), border 250ms var(--cubic);
 } 
 
 
